--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Xiaomeng Qin"
+title                    : "Xiaomeng(Symone) Qin"
 title_separator          : "-"
-name                     : &name "Xiaomeng Qin"
+name                     : &name "Symone Qin"
 description              : &description "personal description"
 url                      : https://SymoneQin.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
