--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Xiaomeng (Symone) Qin"
   avatar           : "profile.png"
-  bio              : "MPS.(Applied Statistics) at Cornell University"
+  bio              : "M.P.S.(Applied Statistics) at Cornell University \ B.S.(Probability and Statistics) at UC San Diego"
   location         : "FL, US"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
