--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Xiaomeng(Symone) Qin"
+title                    : "Home Page"
 title_separator          : "-"
 name                     : &name "Symone Qin"
 description              : &description "personal description"
