--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Xiaomeng (Symone) Qin"
+  name             : "Symone (Xiaomeng) Qin"
   avatar           : "profile.png"
   bio              : "M.P.S.(Applied Statistics) at Cornell University \ B.S.(Probability and Statistics) at UC San Diego"
   location         : "FL, US"
